docs(37): the sweep is done -- and it found two defects it did not cause
Gates, all at --local because nothing is pushed:

  10  branch-file-identity-audit  exit 0  48 shared paths byte-identical on 8 branches
  11  gradle-key-identity-audit   exit 0  10 SHARED agree, 2 DISTINCT differ
   9  manifest-identity-audit     exit 0  all 8 manifests distinct

Two commits per band, seven bands. Per band: gradle build green with `> Task
:test` bare, manifest regenerated, gate 8 --check PASS, mixin-allow-audit
--self-test and --check PASS, config-id-audit --self-test and --check PASS.

--require-bands COUNTS mc/** ONLY, so the argument is 7, not 8. Passing 8 returns
exit 2 -- which the ship gate says is not a pass -- while the same run still
prints "No drift" above it. Read the exit code, not the sentence. Recorded,
because this is the third guard in this repo whose reassuring line and whose exit
code disagree.

WHAT THE SWEEP FOUND

1. The mixin gate picked its jar by ALPHABET: ZERO=61 on mc/1.21.11, every
   injector dead on a band that ships and boots. find_jar ended in sorted()[0]
   over a Loom cache shared by every project and branch on this machine, and a
   MOJANG-named 1.21.11 jar our own section 33 rename tooling created hours
   earlier sorts ahead of the yarn one. Fixed on master first (4f4e4d8bb), then
   carried. Only 1.21.11 was poisoned -- the one version the rename targeted, and
   the one band that is not pushed, which is why it hid.

2. mc/1.21.1's committed manifest was STALE and gate 8 was RED there, on a band
   that shipped v1.2.0. Its /summon origin mixin landed without the manifest
   being regenerated: 1413 -> 1416, +6/-3, the extra three being SummonCommand as
   CLASS, METHOD and MIXINCLASS. Confirmed by running --check against the
   committed file, which exits 1.

   The general shape, not a 1.21.1 quirk: gate 8 is a hand-run ship-gate step,
   absent from release.yml, so no push has ever executed it. A band-specific
   source addition silently i